<resources>
    <string name="app_name">Instagram clone</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an Account? Login Here</string>
    <string name="instagram">Instagram</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_new_account">Create new account</string>
</resources>